[tool.poetry]
name = "lab8"
version = "0.1.0"
description = ""
authors = ["OlegKorniychuk <kornoleg576@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
paramiko = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
